--- a/customers/templates/customers/customer_delete.html
+++ b/customers/templates/customers/customer_delete.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div>Czy na pewno chcesz usunąć tego klienta?</div><br/>
-    <form action="{% url "customer_delete" %}" method="post">
+    <form action="{% url "customer_delete" customer.id %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Usuń">
