templates add and update

--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -12,4 +12,5 @@
     {% endfor %}
     <br/><br/>
     <div><a href="{% url "customer_create" %}">Stwórz nowego klienta</a></div>
+    <div><a href="{% url "contract_create" %}">Dodaj umowe</a></div>
 {% endblock body %}
