--- a/customers/templates/customers/customer_update.html
+++ b/customers/templates/customers/customer_update.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %}TEdytowanie klienta{% endblock title %}
+{% block title %}Edytowanie klienta{% endblock title %}
 
 {% block body %}
     <form action="{% url "customer_update" customer.id %}" method="post">
