--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -10,7 +10,7 @@
     <div>Osoba do kontaktu: {{ customer.contact_person }}</div>
     <div>Umowa/y:</div>
     {% for contract in customer.contract_set.all %}
-        <div>{{ contract.number }}</div>
+        <div> - {{ contract.number }}</div>
     {% endfor %}
     <br/><br/>
     <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
