--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -10,7 +10,10 @@
     <div>Osoba do kontaktu: {{ customer.contact_person }}</div>
     <div>Umowa/y:</div>
     {% for contract in customer.contract_set.all %}
-        <div> - {{ contract.number }}</div>
+        <div> - <a href="{% url 'contract_detail' contract.id %}">{{ contract.number }}</a>
+                <a href="{% url 'contract_update' contract.id %}">Edytuj</a>
+                    <a href="{% url 'contract_delete' contract.id %}">Usuń</a>
+        </div>
     {% endfor %}
     <br/><br/>
     <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
