--- a/customers/templates/contracts/contract_detail.html
+++ b/customers/templates/contracts/contract_detail.html
@@ -7,6 +7,14 @@
     <div>Data rozpoczęcia: {{ contract.start_date }}</div>
     <div>Data zakońćzenia: {{ contract.end_date }}</div>
     <div>cena za kilogram: {{ contract.price_for_kg }}</div>
+    <div>Faktura/y do umowy:</div>
+    {% for invoice in contract.invoice_set.all %}
+        <div> - <a href="{% url 'invoice_detail' invoice.id %}">{{ invoice.number }}</a>
+                <a href="{% url 'invoice_update' invoice.id %}">Edytuj</a>
+                    <a href="{% url 'invoice_delete' invoice.id %}">Usuń</a>
+        </div>
+    {% endfor %}
     <br/><br/>
+
     <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
 {% endblock body %}
