--- a/accounts/templates/registration/logout.html
+++ b/accounts/templates/registration/logout.html
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>Wylogowano Poprawnie!!</h1>
 
-    <a href="{% url "login" %}">Zaloguj ponownie</a>
+    <a href="{% url 'login' %}">Zaloguj ponownie</a>
 {% endblock body %}
