--- a/customers/templates/contracts/contract_update.html
+++ b/customers/templates/contracts/contract_update.html
@@ -3,11 +3,11 @@
 {% block title %}Edytowanie umowy{% endblock title %}
 
 {% block body %}
-    <form action="{% url "contract_update" contract.id %}" method="post">
+    <form action="{% url 'contract_update' contract.id %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="OK">
     <br/><br/>
-    <div><a href="{% url "contract_list" %}">Powrót do listy umów</a></div>
+    <div><a href="{% url 'contract_list' %}">Powrót do listy umów</a></div>
   </form>
 {% endblock body %}
