--- a/customers/templates/invoices/invoice_detail.html
+++ b/customers/templates/invoices/invoice_detail.html
@@ -7,5 +7,5 @@
     <div>Data wpłynięcia: {{ invoice.date_of_receipt }}</div>
     <div>Data płatności: {{ invoice.payment_date }}</div>
     <br/><br/>
-    <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
+    <div><a href="{% url 'customer_list' %}">Powrót do listy klientów</a></div>
 {% endblock body %}
