--- a/stock/templates/stock/stock_create.html
+++ b/stock/templates/stock/stock_create.html
@@ -1,20 +1,16 @@
-<!-- po mergu tego brancha zmienić na: klamra procent extends "accounts/base.html" procent klamra -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Nowy asortyment</title>
-</head>
-<body>
+{% extends "accounts/base.html" %}
+
+{% block title %}TNowy asortyment{% endblock title %}
+
+{% block body %}
     {% if stock %}
         <div>Nowy asortyment {{ stock.name }} został utworzony</div><br/>
     {% endif %}
-    <form action="{%  url "stock_create" %}" method="post">
+    <form action="{%  url 'stock_create' %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="OK">
 
     </form>
-    <div><a href="{% url "stock_list" %}">Powrót do listy asortymentu</a></div>
-</body>
-</html>
+    <div><a href="{% url 'stock_list' %}">Powrót do listy asortymentu</a></div>
+{% endblock body %}
