--- a/stock/templates/stock/stock_detail.html
+++ b/stock/templates/stock/stock_detail.html
@@ -1,15 +1,11 @@
-<!-- po mergu tego brancha zmienić na: klamra procent extends "accounts/base.html" procent klamra -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Szczegóły asortymentu</title>
-</head>
-<body>
+{% extends "accounts/base.html" %}
+
+{% block title %}Szczegóły asortymentu{% endblock title %}
+
+{% block body %}
     <h1>Szczegóły asortymentu: {{ stock }}</h1><br>
     <div>Nazwa: {{ stock.name }}</div>
     <div>Ilość: {{ stock.quantity }}</div>
     <div>Masa: {{ stock.unit_weight }}</div>
-    <div><a href="{% url "stock_list" %}">Powrót do listy asortymentu</a></div>
-</body>
-</html>
+    <div><a href="{% url 'stock_list' %}">Powrót do listy asortymentu</a></div>
+{% endblock body %}
