--- a/customers/templates/contracts/contract_delete.html
+++ b/customers/templates/contracts/contract_delete.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div>Czy na pewno chcesz usunąć tą umowę?</div><br/>
-    <form action="{% url "contract_delete" contract.id %}" method="post">
+    <form action="{% url 'contract_delete' contract.id %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Usuń">
