--- a/customers/templates/contracts/contract_detail.html
+++ b/customers/templates/contracts/contract_detail.html
@@ -16,5 +16,5 @@
     {% endfor %}
     <br/><br/>
 
-    <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
+    <div><a href="{% url 'customer_list' %}">Powrót do listy klientów</a></div>
 {% endblock body %}
