--- a/customers/templates/invoices/invoice_create.html
+++ b/customers/templates/invoices/invoice_create.html
@@ -6,11 +6,11 @@
     {% if invoice %}
         <div>Udało się! Faktura o numerze {{ invoice.number }} został poprawnie utworzony!</div><br/>
     {% endif %}
-    <form action="{% url "invoice_create" %}" method="post">
+    <form action="{% url 'invoice_create' %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="OK">
 
     </form>
-    <div><a href="{% url "customer_list" %}">Powrót do listy klientów</a></div>
+    <div><a href="{% url 'customer_list' %}">Powrót do listy klientów</a></div>
 {% endblock body %}
