--- a/stock/templates/stock/stock_delete.html
+++ b/stock/templates/stock/stock_delete.html
@@ -1,17 +1,13 @@
-<!-- po mergu tego brancha zmienić na: klamra procent extends "accounts/base.html" procent klamra -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Usuń asortyment</title>
-</head>
-<body>
+{% extends "accounts/base.html" %}
+
+{% block title %}Usuń asortyment{% endblock title %}
+
+{% block body %}
     <h1>Usuń asortyment</h1>
     <div>Asortyment {{ stock }} został usunięty</div><br/>
-    <form action="{% url "stock_delete" stock.pk %}" method="post">
+    <form action="{% url 'stock_delete' stock.pk %}" method="post">
         {% csrf_token %}
         <input type="submit" value="OK">
     </form>
-    <div><a href="{% url "stock_list" %}">Powrót do listy asortymentu</a></div>
-</body>
-</html>
+    <div><a href="{% url 'stock_list' %}">Powrót do listy asortymentu</a></div>
+{% endblock body %}
