--- a/stock/templates/stock/stock_update.html
+++ b/stock/templates/stock/stock_update.html
@@ -1,21 +1,17 @@
-<!-- po mergu tego brancha zmienić na: klamra procent extends "accounts/base.html" procent klamra -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Modyfikuj asortyment</title>
-</head>
-<body>
+{% extends "accounts/base.html" %}
+
+{% block title %}Modyfikuj asortyment{% endblock title %}
+
+{% block body %}
     <h1>Modyfikuj asortyment</h1>
     {% if stock %}
         <div>Dokonaj modyfikacji {{ stock.name }}</div>
     {% endif %}
-    <form action="{% url "stock_update" stock.pk %}" method="post">
+    <form action="{% url 'stock_update' stock.pk %}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="OK">
 
     </form>
-    <div><a href="{% url "stock_list" %}">Powrót do listy asortymentu</a></div>
-</body>
-</html>
+    <div><a href="{% url 'stock_list' %}">Powrót do listy asortymentu</a></div>
+{% endblock body %}
