templates name fixing

--- a/stock/templates/stock/stock_list.html
+++ b/stock/templates/stock/stock_list.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %}TLista asortymnetu{% endblock title %}
+{% block title %}Lista asortymnetu{% endblock title %}
 
 {% block body %}
     <h1>Lista asortymentu</h1>
