--- a/stock/templates/stock/stock_create.html
+++ b/stock/templates/stock/stock_create.html
@@ -1,6 +1,6 @@
 {% extends "accounts/base.html" %}
 
-{% block title %}TNowy asortyment{% endblock title %}
+{% block title %}Nowy asortyment{% endblock title %}
 
 {% block body %}
     {% if stock %}
