--- a/cars/templates/cars/car_form.html
+++ b/cars/templates/cars/car_form.html
@@ -4,10 +4,12 @@
 
 {% block body %}
     <h1>{% if form.instance.pk %}Edytuj samochód{% else %}Dodaj samochód{% endif %}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Zapisz</button>
-    </form>
+    <div class="good-look">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Zapisz</button>
+        </form>
+    </div>
     <a href="{% url 'car_list' %}">Anuluj</a>
 {% endblock body %}
