--- a/cars/templates/cars/car_list.html
+++ b/cars/templates/cars/car_list.html
@@ -5,16 +5,15 @@
 {% block body %}
     <h1>Lista samochodów</h1>
     <a href="{% url 'car_create' %}">dodaj nowy samochod</a>
-    <ul>
+    <ul class="list-group">
         {% for car in cars %}
-        <li>
-            <a href="{% url 'car_detail' car.pk %}">{{ car }}</a>
-            <a href="{% url 'car_update' car.pk %}">edytuj</a>
-            <form action="{% url 'car_delete' car.pk %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <input type="submit" value="Delete">
-            </form>
+        <li class="list-group-item">
+            <a href="{% url 'car_detail' car.pk %}">{{ car.brand }} {{ car.model }} {{ car.registration_number }}</a> &nbsp
+            <a href="{% url 'car_update' car.pk %}"><i class="bi bi-pencil"></i></a> &nbsp
+            <a href="{% url 'car_delete' car.pk %}"><i class="bi bi-trash3-fill"></i></a>
         </li>
         {% endfor %}
     </ul>
+    <br/><br/>
+    <div><a href="{% url 'main_page' %}">Powrót na stronę główną</a></div>
 {% endblock body %}
