--- a/customers/templates/customers/customer_update.html
+++ b/customers/templates/customers/customer_update.html
@@ -3,11 +3,14 @@
 {% block title %}Edytowanie klienta{% endblock title %}
 
 {% block body %}
-    <form action="{% url 'customer_update' customer.id %}" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="OK">
+    <div class="good-look">
+        <form action="{% url 'customer_update' customer.id %}" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="OK">
+        </form>
+    </div>
     <br/><br/>
     <div><a href="{% url 'customer_list' %}">Powrót do listy klientów</a></div>
-  </form>
+
 {% endblock body %}
