--- a/stock/templates/stock/stock_create.html
+++ b/stock/templates/stock/stock_create.html
@@ -8,7 +8,7 @@
     {% endif %}
     <form action="{%  url 'stock_create' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <input type="submit" value="OK">
 
     </form>
