--- a/stock/templates/stock/stock_list.html
+++ b/stock/templates/stock/stock_list.html
@@ -5,11 +5,15 @@
 {% block body %}
     <h1>Lista asortymentu</h1>
     <a href="{%  url 'stock_create' %}">Dodaj nowy asortyment</a>
-    {% for stock in stocks %}
-        <div>
-            <a href="{% url 'stock_detail' stock.id %}">{{ stock.name }}</a> -
-            <a href="{% url 'stock_update' stock.id %}">Edytuj</a> -
-            <a href="{% url 'stock_delete' stock.id %}">Usuń</a>
-        </div>
-    {% endfor %}
+    <ul class="list-group">
+        {% for stock in stocks %}
+            <li class="list-group-item">
+                <a href="{% url 'stock_detail' stock.id %}">{{ stock.name }}</a> &nbsp
+                <a href="{% url 'stock_update' stock.id %}"><i class="bi bi-pencil"></i></a> &nbsp
+                <a href="{% url 'stock_delete' stock.id %}"><i class="bi bi-trash3-fill"></i></a>
+            </li>
+        {% endfor %}
+    </ul>
+    <br/><br/>
+    <div><a href="{% url 'main_page' %}">Powrót na stronę główną</a></div>
 {% endblock body %}
