--- a/accounts/templates/accounts/main_page.html
+++ b/accounts/templates/accounts/main_page.html
@@ -30,7 +30,7 @@
                                 </p>
                             </div>
                             <div class="card-read-more">
-                                <a href="../customers/customer_list" class="btn btn-link btn-block">
+                                <a href="{% url 'customer_list' %}" class="btn btn-link btn-block">
                                     Przejdź dalej
                                 </a>
                             </div>
@@ -51,7 +51,7 @@
                                 </p>
                             </div>
                             <div class="card-read-more">
-                                <a href="../customers/customer_create" class="btn btn-link btn-block">
+                                <a href="{% url 'customer_create' %}" class="btn btn-link btn-block">
                                     Przejdź dalej
                                 </a>
                             </div>
@@ -72,7 +72,7 @@
                                 </p>
                             </div>
                             <div class="card-read-more">
-                                <a href="../cars/car_list" class="btn btn-link btn-block">
+                                <a href="{% url 'car_list' %}" class="btn btn-link btn-block">
                                     Przejdź dalej
                                 </a>
                             </div>
@@ -92,7 +92,7 @@
                                 </p>
                             </div>
                             <div class="card-read-more">
-                                <a href="../stock/stock_list" class="btn btn-link btn-block">
+                                <a href="{% url 'stock_list' %}" class="btn btn-link btn-block">
                                     Przejdź dalej
                                 </a>
                             </div>
